--- a/index.css
+++ b/index.css
@@ -296,3 +296,190 @@ header {
 .iconos-contacto a {
   margin-right: 8px;
 }
+
+@media (max-width: 912px) {
+  .presentacion-content {
+    flex-direction: column;
+    width: 80%;
+  }
+
+  .perfil-redes-container {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .presentacion-container {
+    margin-top: 130px;
+    width: 100%;
+  }
+
+  .formacion-container {
+    width: 80%;
+  }
+
+  .experiencia-container {
+    width: 80%;
+  }
+
+  .card-container {
+    width: 80%;
+  }
+
+  .cards-content {
+    justify-content: space-around;
+    margin-top: 24px;
+  }
+
+  .contacto-container {
+    width: 80%;
+  }
+
+  .contacto-content {
+    flex-direction: column;
+  }
+
+  .contacto-informacion {
+    width: 100%;
+  }
+
+  .formulario-container {
+    width: 60%;
+    margin-top: 32px;
+    background-color: rgb(207, 206, 203);
+    padding: 12px;
+    border-radius: 16px;
+  }
+}
+
+@media (max-width: 820px) {
+  .presentacion-content {
+    flex-direction: column;
+    width: 80%;
+  }
+
+  .perfil-redes-container {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .presentacion-container {
+    margin-top: 130px;
+    width: 100%;
+  }
+
+  .formacion-container {
+    width: 80%;
+  }
+
+  .experiencia-container {
+    width: 80%;
+  }
+
+  .card-container {
+    width: 80%;
+  }
+
+  .cards-content {
+    justify-content: space-around;
+    margin-top: 24px;
+  }
+
+  .contacto-container {
+    width: 80%;
+  }
+
+  .contacto-content {
+    flex-direction: column;
+  }
+
+  .contacto-informacion {
+    width: 100%;
+  }
+
+  .formulario-container {
+    width: 100%;
+    margin-top: 32px;
+    background-color: rgb(207, 206, 203);
+    padding: 12px;
+    border-radius: 16px;
+  }
+}
+
+@media (max-width: 678px) {
+  header {
+    flex-direction: column;
+    height: auto;
+    padding: 20px 0 0 0;
+  }
+
+  .nav-items {
+    margin-top: 16px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .nav-items a {
+    margin: 0;
+    border-radius: 0;
+    border: 1px solid white;
+    text-align: center;
+  }
+
+  .presentacion-content {
+    flex-direction: column;
+    width: 80%;
+  }
+
+  .perfil-redes-container {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .presentacion-container {
+    margin-top: 130px;
+    width: 100%;
+  }
+
+  .formacion-container {
+    width: 80%;
+  }
+
+  .experiencia-container {
+    width: 80%;
+  }
+
+  .card-container {
+    width: 80%;
+  }
+
+  .card {
+    width: 75%;
+    margin-bottom: 12px;
+  }
+
+  .cards-content {
+    justify-content: center;
+    margin-top: 24px;
+  }
+
+  .contacto-container {
+    width: 80%;
+  }
+
+  .contacto-content {
+    flex-direction: column;
+  }
+
+  .contacto-informacion {
+    width: 100%;
+  }
+
+  .formulario-container {
+    width: 100%;
+    margin-top: 32px;
+    background-color: rgb(207, 206, 203);
+    padding: 12px;
+    border-radius: 16px;
+  }
+}
